# agentforce

./: .dockerignore  .env.example  .gitignore  README.md  claude.md  docker-compose.yml  insurance-golden-queries.json  pyproject.toml
.claude/agents/: ceo.md  coo.md  cto.md  sales.md
apps/studio/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/studio/src/app/: globals.css  layout.tsx  page.tsx
apps/studio/src/components/: AttachmentInput.tsx  FlowDesigner.tsx  QueryForm.tsx  ResultView.tsx
apps/studio/src/components/ui/: badge.tsx  button.tsx  card.tsx  textarea.tsx
apps/studio/src/lib/: api-client.ts  types.ts
docs/: phase1-week1-plan.md
docs/adr/: 0001-job-dispatch-architecture.md
infra/helm/agentforge/: Chart.yaml  values.yaml
infra/helm/agentforge/templates/: _helpers.tpl  api-gateway.yaml  configmap.yaml  migrate-job.yaml  postgres.yaml  redis.yaml  secrets.yaml  studio.yaml  worker.yaml
infra/postgres/migrations/: 0000_init.sql  0001_tenants.sql  0002_runs.sql  0003_llm_spend.sql  0004_files.sql  0005_sessions.sql
infra/terraform/: ecr.tf  elasticache.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  variables.tf  versions.tf
pitch/: AgentForge.pitch.pptx  build_deck.py
scripts/: bootstrap-local.sh  debug_flow.py
src/agentforge/: __init__.py
src/agentforge/core/: config.py  schema.py
src/agentforge/core/auth/: __init__.py  keys.py
src/agentforge/core/db/: __init__.py  client.py  migrate.py  seed.py
src/agentforge/core/db/repos/: __init__.py  api_keys.py  run_events.py  runs.py  sessions.py  tenants.py
src/agentforge/core/llm/: __init__.py  anthropic_router.py  factory.py  litellm_router.py  pricing.py  types.py
src/agentforge/core/observability/: __init__.py  logging.py
src/agentforge/core/runtime/: __init__.py  events.py  limits.py  loop.py  stop.py  synthesize.py
src/agentforge/core/tools/: __init__.py  cache.py  protocol.py  redis_client.py  registry.py  validate.py
src/agentforge/platform/api_gateway/: __init__.py  deps.py  main.py  schemas.py
src/agentforge/platform/api_gateway/routes/: agents.py  runs.py
src/agentforge/platform/cli/: main.py
src/agentforge/platform/run_orchestrator/: __init__.py  keys.py  queue.py  reaper.py
src/agentforge/platform/worker/: __init__.py  loop.py  main.py
src/agentforge/verticals/insurance/: __init__.py  system_prompt.py
src/agentforge/verticals/insurance/data/: naic_model_laws.py
src/agentforge/verticals/insurance/eval/: __init__.py  golden_queries.json  run_evals.py
src/agentforge/verticals/insurance/tools/: iso_forms_search.py  naic_lookup.py  policy_doc_parse.py  state_doi_query.py  web_search.py
tests/: conftest.py
tests/core/: test_agent_loop_smoke.py
tests/db/: test_repos.py
tests/insurance/: test_naic_lookup.py
(+1 files in other folders)
